--- a/src/components/QuestionForm.module.css
+++ b/src/components/QuestionForm.module.css
@@ -30,3 +30,12 @@
     background-position: 0% 0%, 50% 0%, 100% 0%;
   }
 }
+
+.blur {
+  filter: blur(10px);
+  transition: filter 0.3s ease-in-out;
+}
+
+.loaded {
+  filter: blur(0px);
+}
