--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -10,6 +10,24 @@
   }
 }
 
+html,
 body {
-  background-color: #eeeeee;
+  margin: 0px;
+  padding: 0px;
+  background-color: rgb(250, 250, 250);
+}
+
+body {
+  max-width: 600px;
+  min-height: 90dvh;
+  margin: 5dvh auto;
+  background-color: white;
+  padding: 0px 15px;
+  box-shadow: #64646f33 0px 7px 29px 0px;
+}
+
+a {
+  color: black;
+  text-decoration: none;
+  cursor: pointer;
 }
