--- a/src/components/Question/QuestionForm.module.css
+++ b/src/components/Question/QuestionForm.module.css
@@ -39,3 +39,12 @@
 .loaded {
   filter: blur(0px);
 }
+
+.container {
+  margin: 0 auto;
+  width: 100%;
+  display:flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
