--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,7 @@ body {
   margin: 0px;
   padding: 0px;
   background-color: rgb(250, 250, 250);
+  font-family: 'Nanum Brush Script', cursive;
 }
 
 body {
